# ddsp_pytorch

./: .gitignore  .gitmodules  README.md  app.py  config.json  config.yaml  export.py  performance.py  preprocess.py  preprocess_from_sigmund.py  requirements.txt  scattering.py  target.txt  test.py  timbre-transfer.py  train.py
max_port/: CMakeLists.txt  License.md  package-info.json  package-info.json.in
max_port/source/min-api/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
max_port/source/min-api/.github/workflows/: test.yml
max_port/source/min-api/doc/: API-Attribute.md  GuideToAudio.md  GuideToDataspaces.md  GuideToThreading.md  GuideToWhereToLook.md  GuideToWritingObjects.md  doxyfile.in
max_port/source/min-api/include/: c74_min.h  c74_min_api.h  c74_min_argument.h  c74_min_atom.h  c74_min_attribute.h  c74_min_attribute_impl.h  c74_min_buffer.h  c74_min_buffer_impl.h  c74_min_catch.h  c74_min_dataspace.h  c74_min_dataspace_gain.h  c74_min_dataspace_none.h  c74_min_event.h  c74_min_flags.h  c74_min_impl.h  c74_min_inlet.h  c74_min_limit.h  c74_min_logger.h  c74_min_message.h  c74_min_object.h  c74_min_object_components.h  c74_min_object_wrapper.h  c74_min_operator_mc.h  c74_min_operator_sample.h  c74_min_operator_ui.h  c74_min_operator_vector.h  c74_min_patcher.h  c74_min_path.h  c74_min_port.h  c74_min_queue.h  c74_min_string.h  c74_min_threadsafety.h  c74_min_time.h  c74_min_timer.h  c74_min_unittest.h
max_port/source/min-api/include/murmur/: Murmur3.h  main.cpp
max_port/source/min-api/max-api/: Authors.md  License.md  ReadMe.md
max_port/source/min-api/max-api/include/: c74_max_atom.h  c74_max_atomarray.h  c74_max_dictionary.h  c74_max_dictobj.h  c74_max_hashtab.h  c74_max_linklist.h  c74_max_obstring.h  c74_max_path.h  c74_max_platform.h  c74_max_systhread.h  c74_ui_dataview.h  c74_ui_graphics.h  jit.gl.h
max_port/source/min-api/max-api/lib/win32/: MaxAudio.lib  jitlib.lib
max_port/source/min-api/max-api/lib/win64/: MaxAPI.lib  jitlib.lib
max_port/source/min-api/max-api/script/: GetGitRevisionDescription.cmake  Info.plist  excludefromcollectives.json  max-linker-flags.txt  max-posttarget.cmake  msp-linker-flags.txt  verinfo.rc.in
max_port/source/min-api/max-api/script/cmakepp/: LICENSE  README.md.in  _coverpage.md  _navbar.md.in  cmakepp.sublime-project  install-bash.sh  install.cmake  package.cmake
max_port/source/min-api/max-api/script/cmakepp/docs/: dependency_management.md.in
max_port/source/min-api/max-api/script/cmakepp/resources/: expr-definition.json
max_port/source/min-api/max-api/script/cmakepp/samples/: README.md.in
max_port/source/min-api/max-api/script/cmakepp/samples/04-create-simple-compressed-package/: README.md
max_port/source/min-api/max-api/script/cmakepp/samples/05-create-install-simple-package-with-install-script/: README.md
max_port/source/min-api/max-api/script/cmakepp/samples/06-vanilla-cmake-project-with-install/: test.cmake
max_port/source/min-api/max-api/script/cmakepp/source/: eval_predicate.cmake
max_port/source/min-api/max-api/script/cmakepp/source/core/: dbg.cmake  (+35 more)
max_port/source/min-api/max-api/script/cmakepp/tests/: cmakelists_open_close_test.cmake  command_line_handler_test.cmake  compile_cmakepp_test.cmake  eval_tests.cmake  navigation_expression_parse_test.cmake  qm_serialize_deserialize_test.cmake  quickmap_test.cmake  task_invoke_later_test.cmake  unsafe_file_operation_test.cmake  value_descriptor_parse_tests.cmake
max_port/source/min-api/script/: min-package.cmake  min-pretarget.cmake  pre-commit
max_port/source/min-api/test/: CMakeLists.txt  atom.cpp  limit.cpp  main.cpp  min-object-unittest.cmake  object.cpp  symbol.cpp
max_port/source/min-api/test/limit/: limit_test.cpp
max_port/source/min-api/test/mock/: CMakeLists.txt  c74_mock.h  c74_mock_atoms.h  c74_mock_dictionary.h  c74_mock_kernel.h  c74_mock_misc.h  c74_mock_outlets.h  c74_mock_ui.h
max_port/source/min-api/test/object/: object_test.cpp
max_port/source/min-api/test/symbol/: symbol_test.cpp
max_port/source/min-lib/: .gitignore  .travis.yml  Authors.md  CMakeLists.txt  License.md  ReadMe.md
max_port/source/min-lib/include/: c74_lib_adsr.h  c74_lib_circular_storage.h  c74_lib_dcblocker.h  c74_lib_easing.h  c74_lib_filters.h  c74_lib_generator.h  c74_lib_interpolator.h  c74_lib_limiter.h  c74_lib_math.h  c74_lib_oscillator.h  c74_lib_saturation.h  c74_lib_sync.h
max_port/source/min-lib/test/: InterpolatorTargetOutput.m
max_port/source/min-lib/test/Easing/: Easing_test.cpp
max_port/source/min-lib/test/allpass/: AllpassTargetOutput.m  allpass_test.cpp
max_port/source/min-lib/test/circular_storage/: circular_storage_test.cpp
max_port/source/min-lib/test/dcblocker/: dcblocker_test.cpp
max_port/source/min-lib/test/delay/: delay_test.cpp
max_port/source/min-lib/test/generator/: generator_test.cpp
max_port/source/min-lib/test/interpolator/: CMakeLists.txt  interpolator_test.cpp
max_port/source/min-lib/test/oscillator/: oscillator_test.cpp
max_port/source/projects/KlingKlangKlong.DDSP_realtime/: KlingKlangKlong.DDSP_realtime.cpp  KlingKlangKlong.DDSP_realtime_test.cpp
max_port/source/projects/KlingKlangKlong.hello-world/: KlingKlangKlong.hello-world.cpp  KlingKlangKlong.hello-world_test.cpp
max_port/tests/: min.convolve_test  min.edge_tilde_test  min.edgelow_tilde_test  min.hello-world_test  min.phasor_tilde_test  min.xfade_tilde_test  mock_kernel.exp  mock_kernel.lib
plugins/puredata/: CMakeLists.txt  ddsp_core.cpp  ddsp_core.hpp  ddsp~.cpp  patch.pd
realtime/: CMakeLists.txt
realtime/ddsp_tilde/: ddsp_model.cpp  ddsp_model.h  ddsp_tilde.cpp  m_pd.h  signal_in_out_base.c
realtime/max_external/ddsp_tilde/: CMakeLists.txt  ddsp_tilde.cpp  ddsp_tilde_test.cpp
source/min-api/max-api/script/cmakepp/samples/01-include-cmakepp-pull-eigen/: CMakeLists.txt  README.md
source/min-api/max-api/script/cmakepp/samples/02-include-cmakepp-in-CMakeLists/: CMakeLists.txt  README.md
source/min-api/max-api/script/cmakepp/samples/03-download-include-cmakepp-in-CMakeLists/: CMakeLists.txt  README.md
(+1952 files in other folders)
